--- a/rock-paper-scissor.css
+++ b/rock-paper-scissor.css
@@ -1,6 +1,6 @@
 body
 {
-  background-color: rgb(255, 190, 78);
+  background-color: black;
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
